put buttons above team and fix gaps

--- a/src/sass/60_components/_components.team.scss
+++ b/src/sass/60_components/_components.team.scss
@@ -9,10 +9,6 @@
 
   &__row {
     display: flex;
-    gap: 2rem 0;
-    @include media-breakpoint-up(xl) {
-      gap: 3.5rem 0;
-    }
   }
 
   &__content {
@@ -42,6 +38,10 @@
 
   &__slider {
     margin: 0;
+    margin-top: 3.75rem;
+    @include media-breakpoint-up(md) {
+      margin-top: 5rem;
+    }
     margin-bottom: 5rem;
     overflow: visible;
     padding-right: 0;
@@ -59,7 +59,11 @@
   }
 
   &__buttons {
-    justify-content: center;
+    justify-content: start;
+    margin-top: 2.5rem;
+    @include media-breakpoint-up(md) {
+      margin-top: 3.75rem;
+    }
     @include media-breakpoint-up(xl) {
       max-width: 66.6666666667%;
     }
